# porthole

./: .bumpversion.toml  .dockerignore  .gitignore  .kubeconfig  .kubeconfig-single-cluster  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  KUBERNETES_API_TEST.md  Makefile  README-uv-cookiecutter.md  README.md  gke_gcloud_auth_plugin_cache  pyproject.toml
docker/: Dockerfile  Dockerfile.app-changes-only  Dockerfile.nginx-python-ubi-base  Dockerfile.ubi  Dockerfile.ubi2  entrypoint-nginx.sh  entrypoint.sh  kind-config.yaml  nginx.conf  podman-compose.yml  podman-kind-cluster-testing.sh  trivy.sh
examples/: README.md  helmValues-oauth2-proxy.yaml
generated-output/: locations.conf  services.json
k8s/: README.md  config.yaml  deploy.sh  deployment.yaml  openresty-watcher-config.yaml  rbac.yaml  service.yaml
output/: locations.conf  portal.html  services.json  table.html
scripts/: create-configmap.sh  docker-cleanup.sh  entrypoint.sh  generate_favicon.py  init-container-entrypoint.sh  kubectl-install-for-debug.sh  openresty-config-watcher.sh  startup-watch-serve.sh  startup-watch.sh  startup.sh
src/porthole/: __init__.py  config.py  constants.py  http_checker.py  k8s_client.py  models.py  nginx_generator.py  nginx_reloader.py  portal_generator.py  porthole.py  service_discovery.py
src/porthole/config/: nginx.conf  porthole-config.json
src/porthole/static/: index.html  porthole-error.html  porthole-fab.html  services.json
src/porthole/static/old/: porthole-fab.html
src/porthole/templates/: locations.conf.j2  nginx.conf.j2
src/porthole/utils/: generate-favicon.py  generate-logo-with-text.py
src/porthole2/: __init__.py
templates/: default.conf  portal.html  service-list-template.json  table.html
tests/: conftest.py  podman-kind-cluster-testing.sh  test_config.py  test_constants.py  test_k8s_client.py  test_models.py  test_porthole.py
